# energydb

./: .gitignore  .readthedocs.yaml  README.md  main.py  pyproject.toml
docs/: api.rst  architecture.md  conf.py  index.rst  quickstart.md
energydb/: __init__.py  _resolve.py  client.py  hierarchy.py  models.py  scope.py  serialization.py
energydb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
energydb/sql/: create_tables.sql  drop_tables.sql
examples/: notebook.ipynb  quickstart.ipynb
tests/: test_edge_scope.py  test_models.py  test_serialization.py  test_write_tree.py
