[project]
name = "energydb"
version = "0.1.0"
description = "Energy database extending TimeDB with asset storage and hierarchy management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "timedb>=0.1.4",
    "energydatamodel>=0.0.3",
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.1",
]
