[project]
name = "energydb"
version = "0.2.0"
description = "Energy database extending TimeDB with hierarchical asset management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "timedb>=0.1.4",
    "energydatamodel>=0.0.3",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
    "polars>=1.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=2.0",
]
